src/objects/DSCORGPKG__OppAlert__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OppAlerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Change_in_Surge_Score__c</fullName>
        <label>Change in Surge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contributory_Topics__c</fullName>
        <label>Topics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Opportunity_Type__c</fullName>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Rank__c</fullName>
        <label>Rank(Retired)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Surge_Score__c</fullName>
        <label>Surge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Top_Metro_Areas__c</fullName>
        <label>Top Metro Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>DateTime</type>
    </fields>
    <label>DiscoverOrg OppAlert</label>
    <nameField>
        <displayFormat>Op-{0000}</displayFormat>
        <label>OppAlert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg OppAlerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>